feat: add orphaned tasks functionality and integration tests
Signed-off-by: jbrinkman <joe.brinkman@improving.com>

--- a/go/Makefile
+++ b/go/Makefile
@@ -74,6 +74,10 @@ clean:
 	@rm -rf $(COVERAGE_DIR)
 	@find . -type f -name "*.test" -delete
 
+run:
+	@echo "Running application..."
+	@go run cmd/mcpserver/main.go
+
 # Help target
 help:
 	@echo "Available targets:"
