refactor: reorganize project structure by moving Go files to root directory
Signed-off-by: jbrinkman <joe.brinkman@improving.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
 
   mcpserver:
     build:
-      context: ./go
+      context: .
       dockerfile: Dockerfile
     ports:
       - "8080:8080"
