--- a/.github/workflows/container-build.yml
+++ b/.github/workflows/container-build.yml
@@ -38,17 +38,37 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          OUTPUT=$(npx semantic-release --dry-run)
-          if echo "$OUTPUT" | grep -q "The next release version is"; then
-            VERSION=$(echo "$OUTPUT" | grep "The next release version is" | sed 's/.*The next release version is \([0-9]\+\.[0-9]\+\.[0-9]\+\).*/\1/')
-            echo "new_release_published=true" >> $GITHUB_OUTPUT
-            echo "new_release_version=$VERSION" >> $GITHUB_OUTPUT
-            # Run the actual release
-            npx semantic-release
+          # Create a temporary JSON file to store semantic-release output
+          echo '{"branches":["main"],"plugins":[["@semantic-release/npm",{"npmPublish":false}],"@semantic-release/github"]}' > .releaserc.dryrun.json
+          
+          # Run semantic-release with --dry-run and output to JSON file
+          npx semantic-release --dry-run --no-ci --extends .releaserc.dryrun.json > semantic-release-output.json || true
+          
+          # Check if a new release would be created
+          if grep -q '"type":"minor"|"type":"major"|"type":"patch"' semantic-release-output.json; then
+            # Extract version using jq if available, otherwise fallback to grep
+            if command -v jq &> /dev/null; then
+              VERSION=$(cat semantic-release-output.json | jq -r 'select(.nextRelease != null) | .nextRelease.version' 2>/dev/null || echo "")
+            else
+              VERSION=$(grep -o '"version":"[0-9]\+\.[0-9]\+\.[0-9]\+"' semantic-release-output.json | head -1 | cut -d '"' -f 4)
+            fi
+            
+            if [ -n "$VERSION" ]; then
+              echo "new_release_published=true" >> $GITHUB_OUTPUT
+              echo "new_release_version=$VERSION" >> $GITHUB_OUTPUT
+              # Run the actual release with the proper config
+              npx semantic-release
+            else
+              echo "new_release_published=false" >> $GITHUB_OUTPUT
+              echo "Could not determine version" >> $GITHUB_OUTPUT
+            fi
           else
             echo "new_release_published=false" >> $GITHUB_OUTPUT
-            echo "No new version to be released"
+            echo "No new version to be released" >> $GITHUB_OUTPUT
           fi
+          
+          # Clean up temporary files
+          rm -f semantic-release-output.json .releaserc.dryrun.json
         
   build-and-push:
     needs: semantic-release
