--- a/.github/workflows/container-build.yml
+++ b/.github/workflows/container-build.yml
@@ -164,10 +164,8 @@ jobs:
 
   build-and-push:
     runs-on: ubuntu-latest
-    needs: [manual-release]
-    if: |
-      github.event_name == 'release' || 
-      github.event_name == 'workflow_dispatch'
+    # Only run on release events
+    if: github.event_name == 'release'
     permissions:
       contents: read
       packages: write
