--- a/.github/workflows/publish-container-image.yml
+++ b/.github/workflows/publish-container-image.yml
@@ -3,6 +3,12 @@ name: Build and Publish Container
 on:
   release:
     types: [published]
+  workflow_dispatch:
+    inputs:
+      version:
+        description: 'Version to use for container tagging'
+        required: true
+        type: string
 
 jobs:
   build-and-push-container:
