--- a/.github/workflows/publish-container-image.yml
+++ b/.github/workflows/publish-container-image.yml
@@ -2,7 +2,10 @@ name: Build and Publish Container
 
 on:
   release:
-    types: [published]
+    types: [published, created, released]
+  push:
+    tags:
+      - 'v*'
   workflow_dispatch:
     inputs:
       version:
